--- a/Copy_of_PostgresSQLDemo.ipynb
+++ b/Copy_of_PostgresSQLDemo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMUPRgA2A7cRV8SKhe5HNPO",
+      "authorship_tag": "ABX9TyMuj6GgihLVY4iZ1peEQed+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5711,9 +5711,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## **Assign projectid / pgvector datbase parameters**"
+      ],
+      "metadata": {
+        "id": "i4qVnE2pWtHF"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# @markdown Replace the required placeholder text below. You can modify any other default values, if you like.\n",
+        "## @markdown Replace the required placeholder text below. You can modify any other default values, if you like.\n",
         "\n",
         "# Please fill in these values.\n",
         "project_id = \"custom-vigil-328901\"\n",
@@ -5740,9 +5749,18 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## **Authenticate Google Cloud Account and enable APIs**"
+      ],
+      "metadata": {
+        "id": "BfGu3CAQW6kt"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "#@markdown ###Authenticate your Google Cloud Account and enable APIs.\n",
+        "## @markdown ###Authenticate your Google Cloud Account and enable APIs.\n",
         "# Authenticate gcloud.\n",
         "from google.colab import auth\n",
         "auth.authenticate_user()\n",
@@ -5786,9 +5804,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### **Create and setup a Cloud SQL PostgreSQL instance**"
+      ],
+      "metadata": {
+        "id": "FmZjqG3jXgIT"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "#@markdown Create and setup a Cloud SQL PostgreSQL instance, if not done already.\n",
+        "##@markdown Create and setup a Cloud SQL PostgreSQL instance, if not done already.\n",
         "database_version = !gcloud sql instances describe {instance_name} --format=\"value(databaseVersion)\"\n",
         "if database_version[0].startswith(\"POSTGRES\"):\n",
         "  print(\"Found an existing Postgres Cloud SQL Instance!\")\n",
@@ -5853,9 +5880,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### **Verify the PostgreSQL Database Connection**"
+      ],
+      "metadata": {
+        "id": "2eDip_HPbT7Q"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# @markdown Verify that you are able to connect to the database. Executing this block should print the current PostgreSQL server version.\n",
+        "## @markdown Verify that you are able to connect to the database. Executing this block should print the current PostgreSQL server version.\n",
         "\n",
         "import asyncio\n",
         "import asyncpg\n",
@@ -5915,9 +5951,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Load Inquiries CSV dataset into Pandas Dataframe**"
+      ],
+      "metadata": {
+        "id": "h4TFRT3YdNe1"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# @markdown Load Inquiries dataset and store it in a pandas dataframe.\n",
+        "## @markdown Load Inquiries dataset and store it in a pandas dataframe.\n",
         "\n",
         "import pandas as pd\n",
         "import os\n",
@@ -6344,9 +6389,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Load Pandas Dataframe into PostgresSQL Table**\n"
+      ],
+      "metadata": {
+        "id": "TTyfnaNCdc-I"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# @markdown Save the Pandas dataframe in a PostgreSQL table.\n",
+        "# @@markdown Save the Pandas dataframe in a PostgreSQL table.\n",
         "\n",
         "import asyncio\n",
         "import asyncpg\n",
@@ -6411,16 +6465,25 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Split currentspcomment into smaller chunks**"
+      ],
+      "metadata": {
+        "id": "9va0zyRJeAYq"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# @markdown Split long text currentspcomment into smaller chunks that can fit into the API request size limit, as expected by the LLM providers.\n",
+        "## @markdown Split long text currentspcomment into smaller chunks that can fit into the API request size limit, as expected by the LLM providers.\n",
         "\n",
         "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
         "\n",
         "text_splitter = RecursiveCharacterTextSplitter(\n",
-        "    separators=[\".\", \"\\n\",\" \"],\n",
-        "    chunk_size=500,\n",
-        "    chunk_overlap=10,\n",
+        "    separators=[\".\", \"\\n\"],\n",
+        "    chunk_size=300,\n",
+        "    chunk_overlap=0,\n",
         "    length_function=len,\n",
         ")\n",
         "chunked = []\n",
@@ -6437,6 +6500,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " **Create Embedding Function Instance**"
+      ],
+      "metadata": {
+        "id": "GHJpbQZ1eid7"
+      }
     },
     {
       "cell_type": "code",
@@ -6763,9 +6835,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Generate the vector embeddings for each chunk**"
+      ],
+      "metadata": {
+        "id": "KtW0X9Wle9rX"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# @markdown Generate the vector embeddings for each chunk of text.This code snippet may run for a few minutes.\n",
+        "## @markdown Generate the vector embeddings for each chunk of text.This code snippet may run for a few minutes.\n",
         "\n",
         "from langchain.embeddings import VertexAIEmbeddings\n",
         "from google.cloud import aiplatform\n",
