--- a/PostgresSQLDemo.ipynb
+++ b/PostgresSQLDemo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNHwwXfHT7IRrDEOjI/2yuF",
+      "authorship_tag": "ABX9TyMgel3+6O4U3zFnA/1tMX9y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "PahHsgYdq7Jz",
         "colab": {
@@ -313,7 +313,7 @@
         "id": "9u8TK1mmrm67",
         "outputId": "acc2cfe8-0e41-4af8-e7ef-f19ebc060a87"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -352,7 +352,7 @@
       "metadata": {
         "id": "y5N9bq3drr10"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -380,7 +380,7 @@
         "id": "qfxVPLPJsnet",
         "outputId": "48c224d4-4036-4a50-89ac-98893def941f"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -432,7 +432,7 @@
         "id": "2HKudLiLTpxT",
         "outputId": "6178b2dc-bd22-493e-d492-0a5a18858439"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -488,7 +488,7 @@
         "id": "JzNaxZW_UitF",
         "outputId": "3fa12bea-138f-4161-d0c7-ddf4e94ccf82"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -532,7 +532,7 @@
         "id": "i88bsaC3tbbL",
         "outputId": "475914a5-05dd-479e-b40d-fee3295b9bb7"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -972,7 +972,7 @@
         },
         "outputId": "323579b6-cd9b-4efe-f793-5b540fa04fee"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1009,7 +1009,7 @@
       "metadata": {
         "id": "XsMVhzDpB0lL"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1060,7 +1060,7 @@
         "id": "pobYEYymDGwv",
         "outputId": "ae9d86c2-f04b-4e69-dd4e-313018bc3bab"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1440,7 +1440,7 @@
         },
         "outputId": "1cc1bec7-a4d9-4e36-f864-24d7c477dece"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1458,6 +1458,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**PostgreSQL Connection Issues to implement SQLChain**"
+      ],
+      "metadata": {
+        "id": "hmSp_iX5b6OE"
+      }
     },
     {
       "cell_type": "code",
@@ -1640,7 +1649,7 @@
         },
         "outputId": "735ffaaf-cded-40f1-d770-e69fc131ba68"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
