--- a/Copy_of_PostgresSQLDemo.ipynb
+++ b/Copy_of_PostgresSQLDemo.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMbfVCpPJLeBdXisrY0Lr37",
+      "authorship_tag": "ABX9TyP2RDlSEeEEqHsKTUgdFk6M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3540,17 +3540,25 @@
         "id": "fgu_iYkFEtQe",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 181
+          "height": 236
         },
-        "outputId": "42aff092-7d28-4b79-94f8-0e2bf1670ab6"
+        "outputId": "29442fb9-56d4-4eef-d635-36aa497115e2"
       },
-      "execution_count": 24,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "2\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/google/cloud/sql/connector/instance.py:330: CryptographyDeprecationWarning: Properties that return a naïve datetime object have been deprecated. Please switch to not_valid_after_utc.\n",
+            "  expiration = x509.not_valid_after\n"
           ]
         },
         {
@@ -3571,7 +3579,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-01c4eb6d-c7b0-49f7-8115-9a6c05dd26ec\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-63e23c9d-4151-4134-91f4-847d88845f60\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -3629,7 +3637,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-01c4eb6d-c7b0-49f7-8115-9a6c05dd26ec')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-63e23c9d-4151-4134-91f4-847d88845f60')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -3681,12 +3689,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-01c4eb6d-c7b0-49f7-8115-9a6c05dd26ec button.colab-df-convert');\n",
+              "        document.querySelector('#df-63e23c9d-4151-4134-91f4-847d88845f60 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-01c4eb6d-c7b0-49f7-8115-9a6c05dd26ec');\n",
+              "        const element = document.querySelector('#df-63e23c9d-4151-4134-91f4-847d88845f60');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -3706,8 +3714,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-b62fe7fd-c992-4102-8d65-4ec6f462749a\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b62fe7fd-c992-4102-8d65-4ec6f462749a')\"\n",
+              "<div id=\"df-a1c14dda-c7aa-477f-a27e-f7e83e177be0\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a1c14dda-c7aa-477f-a27e-f7e83e177be0')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -3826,7 +3834,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-b62fe7fd-c992-4102-8d65-4ec6f462749a button');\n",
+              "        document.querySelector('#df-a1c14dda-c7aa-477f-a27e-f7e83e177be0 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -3842,7 +3850,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 48
         }
       ]
     },
@@ -4914,7 +4922,7 @@
       "source": [
         "from typing import Optional\n",
         "class Inquiry(BaseModel):\n",
-        "    \"\"\"Information about a person.\"\"\"\n",
+        "    \"\"\"Information about INQUIRY DETAILS.\"\"\"\n",
         "    INQUIRYID: str = Field(description=\"INQUIRY Indentifier\")\n",
         "    CIRCUITID: str = Field(description=\"INQUIRY's CircuitId\")\n",
         "\n",
@@ -4923,7 +4931,7 @@
       "metadata": {
         "id": "RNoa9h76JVP3"
       },
-      "execution_count": 34,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -4931,12 +4939,12 @@
       "source": [
         "class Information(BaseModel):\n",
         "    \"\"\"Information to extract.\"\"\"\n",
-        "    people: List[Inquiry] = Field(description=\"List of info about Inquiry\")"
+        "    people: List[Inquiry] = Field(description=\"List of info about Inquiry details\")"
       ],
       "metadata": {
         "id": "Lda837dfKyR3"
       },
-      "execution_count": 35,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -4946,14 +4954,15 @@
         "import openai\n",
         "from langchain.chat_models import ChatOpenAI\n",
         "\n",
-        "model = ChatOpenAI(temperature=0)\n",
         "os.environ[\"OPENAI_API_KEY\"] = \"\"\n",
+        "model = ChatOpenAI(temperature=0)\n",
+        "\n",
         "\n"
       ],
       "metadata": {
         "id": "jH21zQHsN1dJ"
       },
-      "execution_count": 43,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -4965,7 +4974,7 @@
       "metadata": {
         "id": "Mt8YuEK-NSf-"
       },
-      "execution_count": 38,
+      "execution_count": 55,
       "outputs": []
     },
     {
@@ -4978,9 +4987,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LK522JfoMhZh",
-        "outputId": "274e2793-0d26-494b-bb52-75419cc0f9a9"
+        "outputId": "29d0ca87-a382-4d9c-fe46-9e30b26949ff"
       },
-      "execution_count": 39,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4992,10 +5001,10 @@
               "  'description': 'Information to extract.',\n",
               "  'type': 'object',\n",
               "  'properties': {'people': {'title': 'People',\n",
-              "    'description': 'List of info about Inquiry',\n",
+              "    'description': 'List of info about Inquiry details',\n",
               "    'type': 'array',\n",
               "    'items': {'title': 'Inquiry',\n",
-              "     'description': 'Information about a person.',\n",
+              "     'description': 'Information about INQUIRY DETAILS.',\n",
               "     'type': 'object',\n",
               "     'properties': {'INQUIRYID': {'title': 'Inquiryid',\n",
               "       'description': 'INQUIRY Indentifier',\n",
@@ -5008,14 +5017,14 @@
             ]
           },
           "metadata": {},
-          "execution_count": 39
+          "execution_count": 56
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "extraction_model.invoke(\"Joe is 30, his mom is Martha\")"
+        "extraction_model.invoke(\"INQUIRYID: 20240118071921\")"
       ],
       "metadata": {
         "colab": {
@@ -5023,9 +5032,9 @@
           "height": 304
         },
         "id": "TyxZYUJ-Sbfv",
-        "outputId": "0f5456e3-e868-40f7-db50-7c0877f5ea8d"
+        "outputId": "5789a3c1-85a3-4cc9-ceb8-f71270bb5148"
       },
-      "execution_count": 42,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "error",
@@ -5034,7 +5043,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mAuthenticationError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-42-83d0bf0b580a>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mextraction_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minvoke\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Joe is 30, his mom is Martha\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-57-41732032dc6e>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mextraction_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minvoke\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"INQUIRYID: 20240118071921\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
             "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/langchain/schema/runnable/base.py\u001b[0m in \u001b[0;36minvoke\u001b[0;34m(self, input, config, **kwargs)\u001b[0m\n\u001b[1;32m   2384\u001b[0m         \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mOptional\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mAny\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2385\u001b[0m     ) -> Output:\n\u001b[0;32m-> 2386\u001b[0;31m         return self.bound.invoke(\n\u001b[0m\u001b[1;32m   2387\u001b[0m             \u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2388\u001b[0m             \u001b[0mmerge_configs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconfig\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconfig\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/langchain/chat_models/base.py\u001b[0m in \u001b[0;36minvoke\u001b[0;34m(self, input, config, stop, **kwargs)\u001b[0m\n\u001b[1;32m    147\u001b[0m             cast(\n\u001b[1;32m    148\u001b[0m                 \u001b[0mChatGeneration\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 149\u001b[0;31m                 self.generate_prompt(\n\u001b[0m\u001b[1;32m    150\u001b[0m                     \u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_convert_input\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    151\u001b[0m                     \u001b[0mstop\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstop\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/langchain/chat_models/base.py\u001b[0m in \u001b[0;36mgenerate_prompt\u001b[0;34m(self, prompts, stop, callbacks, **kwargs)\u001b[0m\n\u001b[1;32m    463\u001b[0m     ) -> LLMResult:\n\u001b[1;32m    464\u001b[0m         \u001b[0mprompt_messages\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_messages\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mp\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mprompts\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 465\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgenerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprompt_messages\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstop\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstop\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcallbacks\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcallbacks\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    466\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    467\u001b[0m     async def agenerate_prompt(\n",
