--- a/SQLChain.ipynb
+++ b/SQLChain.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMO9/QkMgVqRESLLCnR6Mlz",
+      "authorship_tag": "ABX9TyNZsTHYrqUlbhwFPZsMDzkm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,195 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        " Creating the SQL Chain\n",
+        "\n",
+        "\n",
+        "\n",
+        " <!-- Reference https://github.com/langchain-ai/langchain/blob/master/cookbook/retrieval_in_sql.ipynb?ref=blog.langchain.dev -->\n"
+      ],
+      "metadata": {
+        "id": "qpbM4-qXRYR8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from langchain.sql_database import SQLDatabase\n",
+        "from langchain_openai import ChatOpenAI\n",
+        "\n",
+        "CONNECTION_STRING = \"postgresql+psycopg2://postgres:test@localhost:5432/vectordb\"  # Replace with your own\n",
+        "db = SQLDatabase.from_uri(CONNECTION_STRING)\n"
+      ],
+      "metadata": {
+        "id": "uid28RwMR0qu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "b7glBdpuQ_YW"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "def get_schema(_):\n",
+        "    return db.get_table_info()\n",
+        "\n",
+        "\n",
+        "def run_query(query):\n",
+        "    return db.run(query)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from langchain_core.prompts import ChatPromptTemplate\n",
+        "\n",
+        "template = \"\"\"You are a Postgres expert. Given an input question, first create a syntactically correct Postgres query to run, then look at the results of the query and return the answer to the input question.\n",
+        "Unless the user specifies in the question a specific number of examples to obtain, query for at most 5 results using the LIMIT clause as per Postgres. You can order the results to return the most informative data in the database.\n",
+        "Never query for all columns from a table. You must query only the columns that are needed to answer the question. Wrap each column name in double quotes (\") to denote them as delimited identifiers.\n",
+        "Pay attention to use only the column names you can see in the tables below. Be careful to not query for columns that do not exist. Also, pay attention to which column is in which table.\n",
+        "Pay attention to use date('now') function to get the current date, if the question involves \"today\".\n",
+        "\n",
+        "You can use an extra extension which allows you to run semantic similarity using <-> operator on tables containing columns named \"embeddings\".\n",
+        "<-> operator can ONLY be used on embeddings columns.\n",
+        "The embeddings value for a given row typically represents the semantic meaning of that row.\n",
+        "The vector represents an embedding representation of the question, given below.\n",
+        "Do NOT fill in the vector values directly, but rather specify a `[search_word]` placeholder, which should contain the word that would be embedded for filtering.\n",
+        "For example, if the user asks for songs about 'the feeling of loneliness' the query could be:\n",
+        "'SELECT \"[whatever_table_name]\".\"SongName\" FROM \"[whatever_table_name]\" ORDER BY \"embeddings\" <-> '[loneliness]' LIMIT 5'\n",
+        "\n",
+        "Use the following format:\n",
+        "\n",
+        "Question: <Question here>\n",
+        "SQLQuery: <SQL Query to run>\n",
+        "SQLResult: <Result of the SQLQuery>\n",
+        "Answer: <Final answer here>\n",
+        "\n",
+        "Only use the following tables:\n",
+        "\n",
+        "{schema}\n",
+        "\"\"\"\n",
+        "\n",
+        "\n",
+        "prompt = ChatPromptTemplate.from_messages(\n",
+        "    [(\"system\", template), (\"human\", \"{question}\")]\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "z2QP0BenRQj6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from langchain_core.output_parsers import StrOutputParser\n",
+        "from langchain_core.runnables import RunnablePassthrough\n",
+        "from langchain_openai import ChatOpenAI\n",
+        "\n",
+        "db = SQLDatabase.from_uri(\n",
+        "    CONNECTION_STRING\n",
+        ")  # We reconnect to db so the new columns are loaded as well.\n",
+        "llm = ChatOpenAI(model_name=\"gpt-4\", temperature=0)\n",
+        "\n",
+        "sql_query_chain = (\n",
+        "    RunnablePassthrough.assign(schema=get_schema)\n",
+        "    | prompt\n",
+        "    | llm.bind(stop=[\"\\nSQLResult:\"])\n",
+        "    | StrOutputParser()\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "zERz4JF6RRmM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sql_query_chain.invoke(\n",
+        "    {\n",
+        "        \"question\": \"Which are the 5 rock songs with titles about deep feeling of dispair?\"\n",
+        "    }\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "gjGCpukYSQNR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# This chain simply generates the query. Now we will create the full chain that also handles the execution and the final result for the user:\n",
+        "\n",
+        "import re\n",
+        "\n",
+        "from langchain_core.runnables import RunnableLambda\n",
+        "\n",
+        "\n",
+        "def replace_brackets(match):\n",
+        "    words_inside_brackets = match.group(1).split(\", \")\n",
+        "    embedded_words = [\n",
+        "        str(embeddings_model.embed_query(word)) for word in words_inside_brackets\n",
+        "    ]\n",
+        "    return \"', '\".join(embedded_words)\n",
+        "\n",
+        "\n",
+        "def get_query(query):\n",
+        "    sql_query = re.sub(r\"\\[([\\w\\s,]+)\\]\", replace_brackets, query)\n",
+        "    return sql_query\n",
+        "\n",
+        "\n",
+        "template = \"\"\"Based on the table schema below, question, sql query, and sql response, write a natural language response:\n",
+        "{schema}\n",
+        "\n",
+        "Question: {question}\n",
+        "SQL Query: {query}\n",
+        "SQL Response: {response}\"\"\"\n",
+        "\n",
+        "prompt = ChatPromptTemplate.from_messages(\n",
+        "    [(\"system\", template), (\"human\", \"{question}\")]\n",
+        ")\n",
+        "\n",
+        "full_chain = (\n",
+        "    RunnablePassthrough.assign(query=sql_query_chain)\n",
+        "    | RunnablePassthrough.assign(\n",
+        "        schema=get_schema,\n",
+        "        response=RunnableLambda(lambda x: db.run(get_query(x[\"query\"]))),\n",
+        "    )\n",
+        "    | prompt\n",
+        "    | llm\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "nPH-_BCJSpqr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "full_chain.invoke(\n",
+        "    {\n",
+        "        \"question\": \"Which are the 5 rock songs with titles about deep feeling of dispair?\"\n",
+        "    }\n",
+        ")\n"
+      ],
+      "metadata": {
+        "id": "hIDhB3tbSyVG"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
