--- a/llamaIndex.ipynb
+++ b/llamaIndex.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPkXvAO8jpl/3AqOC60WYLi",
+      "authorship_tag": "ABX9TyNKbjo+9TRSzLRlM1dXbt7c",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -115,6 +115,26 @@
       ],
       "metadata": {
         "id": "JnaIYSWsq9HK"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "What is **LlmaIndex** :\n",
+        "\n",
+        "LlamaIndex is a data framework for large language models (LLMs) that provides the following tools:\n",
+        "\n",
+        "**Data ingestion:** LlamaIndex offers data connectors to ingest your existing data sources and data formats (APIs, PDFs, docs, SQL, etc.) so that you can use them with LLMs.\n",
+        "\n",
+        "**Data structuring**: LlamaIndex provides ways to structure your data (indices, graphs) so that it can be easily used with LLMs.\n",
+        "\n",
+        "**Retrieval and query interface**: LlamaIndex provides an advanced retrieval/query interface over your data. You can feed in any LLM input prompt, and LlamaIndex will return retrieved context and knowledge-augmented output.\n",
+        "\n",
+        "**Integration with other frameworks**: LlamaIndex allows easy integrations with your outer application framework (e.g. with LangChain, Flask, Docker, ChatGPT, or anything else).\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "0DH39qKQwbXX"
       }
     }
   ]
