--- a/llamaIndex_IndexType.ipynb
+++ b/llamaIndex_IndexType.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN19pEIg5l+AlMC3NyD5BzU",
+      "authorship_tag": "ABX9TyP34tgt2DYXC1DNMpze3hlX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,31 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "In LlamaIndex, there are several types of indexes that serve different purposes. Let’s explore them:\n",
+        "\n",
+        "**List Index:**\n",
+        "\n",
+        "Represents data as a sequential list.\n",
+        "Useful for maintaining order and accessing items by position.\n",
+        "Think of it like an organized shopping list.\n",
+        "\n",
+        "\n",
+        " **Tree Index:**\n",
+        "Organizes data into a hierarchical binary tree structure.\n",
+        "Efficient for searching, insertion, and deletion operations.\n",
+        "Imagine a family tree with ancestors and descendants.\n",
+        "\n",
+        " **Vector Store Index:**\n",
+        "Stores vectors (numeric representations) for efficient retrieval.\n",
+        "Commonly used in similarity searches and recommendation systems.\n",
+        "Picture it as a library of vectors, each representing an item.\n",
+        "\n",
+        " **Keyword Index:**\n",
+        "Facilitates keyword-based retrieval.\n",
+        "Maps keywords to relevant data entries.\n",
+        "Similar to an index in the back of a book."
+      ],
       "metadata": {
         "id": "webTyYYh4ui0"
       }
