--- a/llamaIndex_IndexType.ipynb
+++ b/llamaIndex_IndexType.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP34tgt2DYXC1DNMpze3hlX",
+      "authorship_tag": "ABX9TyP4MZ2qcb962EgtKvKiHAIH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,6 +31,42 @@
       "source": [],
       "metadata": {
         "id": "Di1raoS1ksj-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "https://blog.gopenai.com/different-types-of-indexes-in-llamaindex-to-improve-your-rag-system-0fb13132cab6\n",
+        "\n",
+        " **What is an index in Llamaindex :**\n",
+        "\n",
+        "An index in LlamaIndex is a data structure that allows you to quickly search for and retrieve data from a large corpus of text.\n",
+        "\n",
+        "It works by creating a **mapping between keywords or phrases in the corpus and the documents that contain those keywords or phrases**.\n",
+        "\n",
+        "\n",
+        "Indexes are useful for a variety of tasks, such as:\n",
+        "\n",
+        " **Searching for information**: You can use an index to quickly find all of the documents that contain a particular keyword or phrase. This can be useful for research, customer support, or any other task that requires you to find information in a large corpus of text.\n",
+        "\n",
+        " **Ranking documents**: You can use an index to rank documents by their relevance to a particular query. This can be useful for search engines, recommender systems, or any other application that needs to rank documents.\n",
+        "\n",
+        " **Analyzing text**: You can use an index to analyze the content of a large corpus of text. This can be useful for understanding the sentiment of a document, identifying topics, or extracting keywords.\n",
+        "\n",
+        "\n",
+        "LlamaIndex provides a variety of different index types, each with its own strengths and weaknesses. The best index type for a particular task will depend on the specific requirements of the task.\n",
+        "\n",
+        " **Types of indexes Llamaindex provides to structure or organize your data :**\n",
+        "\n",
+        "let’s understand some terminology first. According to Llamaindex’s official documentation :\n",
+        "\n",
+        " **Node**: Corresponds to a chunk of text from a Document. LlamaIndex takes in Document objects and internally parses/chunks them into Node objects.\n",
+        "\n",
+        "**Response Synthesis**: Our module which synthesizes a response given the retrieved Node.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "IBDbxIK4vQX9"
       }
     },
     {
