--- a/llamaIndex_Retrievers.ipynb
+++ b/llamaIndex_Retrievers.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNQ32Urv4aWg5YHErJhGsHp",
+      "authorship_tag": "ABX9TyPH/iGoBbNwNl27cgJRBwvK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,21 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        " **Advanced Retrieval and Search**\n",
+        "\n",
+        "  These guides contain advanced retrieval techniques. Some are common like keyword/hybrid search, reranking, and more. Some are specific to LLM + RAG pipelines, like small-to-big and auto-merging retrieval.\n",
+        "\n",
+        "1. Define Custom Retriever\n",
+        "2. BM25 Hybrid Retriever\n",
+        "3. Simple Fusion Retriever\n",
+        "4. Reciprocal Rerank Fusion Retriever\n",
+        "5. Relative Score Fusion and Distribution-Based Score Fusion\n",
+        "6. Auto Merging Retriever\n",
+        "7. Metadata Replacement + Node Sentence Window\n",
+        "8. Composable Objects\n",
+        "\n"
+      ],
       "metadata": {
         "id": "Di1raoS1ksj-"
       }
