--- a/llamaIndex_Retrievers.ipynb
+++ b/llamaIndex_Retrievers.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPH/iGoBbNwNl27cgJRBwvK",
+      "authorship_tag": "ABX9TyM1+rPKKKz+adoridppe+gt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,6 +45,24 @@
       ],
       "metadata": {
         "id": "Di1raoS1ksj-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " **Auto-Retrieval**\n",
+        "\n",
+        "These retrieval techniques perform semi-structured queries, combining semantic search with structured filtering.\n",
+        "\n",
+        "A Simple to Advanced Guide with Auto-Retrieval (with Pinecone + Arize Phoenix)\n",
+        "Auto-Retrieval (with Lantern)\n",
+        "Auto-Retrieval (with Chroma)\n",
+        "Auto-Retrieval (with BagelDB)\n",
+        "Structured Hierarchical Retrieval\n",
+        "Auto-Retrieval from a Vectara Index"
+      ],
+      "metadata": {
+        "id": "et52wk4s4Fcf"
       }
     }
   ]
