--- a/llamaIndex_Retrievers.ipynb
+++ b/llamaIndex_Retrievers.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM1+rPKKKz+adoridppe+gt",
+      "authorship_tag": "ABX9TyPbSnBksV1IZlcm1simPMHy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,29 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/RajeshPeddireddy/VectorDB/blob/main/llamaIndex_Retrievers.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " **Auto-Retrieval**\n",
+        "\n",
+        "These retrieval techniques perform semi-structured queries, combining semantic search with structured filtering.\n",
+        "\n",
+        "1. A Simple to Advanced Guide with Auto-Retrieval (with Pinecone + Arize Phoenix)\n",
+        "\n",
+        "2. Auto-Retrieval (with Lantern)\n",
+        "\n",
+        "3. Auto-Retrieval (with Chroma)\n",
+        "\n",
+        "4. Auto-Retrieval (with BagelDB)\n",
+        "\n",
+        "5. Structured Hierarchical Retrieval\n",
+        "\n",
+        "6. Auto-Retrieval from a Vectara Index\n"
+      ],
+      "metadata": {
+        "id": "et52wk4s4Fcf"
+      }
     },
     {
       "cell_type": "markdown",
@@ -50,19 +73,25 @@
     {
       "cell_type": "markdown",
       "source": [
-        " **Auto-Retrieval**\n",
+        " **Composed Retrievers**\n",
         "\n",
-        "These retrieval techniques perform semi-structured queries, combining semantic search with structured filtering.\n",
+        "These are retrieval techniques that are composed on top of other retrieval techniques - providing higher-level capabilities like hierarchical retrieval and query decomposition.\n",
         "\n",
-        "A Simple to Advanced Guide with Auto-Retrieval (with Pinecone + Arize Phoenix)\n",
-        "Auto-Retrieval (with Lantern)\n",
-        "Auto-Retrieval (with Chroma)\n",
-        "Auto-Retrieval (with BagelDB)\n",
-        "Structured Hierarchical Retrieval\n",
-        "Auto-Retrieval from a Vectara Index"
+        "1. Recursive Retriever + Query Engine Demo\n",
+        "2. Recursive Retriever + Node References\n",
+        "3. Recursive Retriever + Node References + Braintrust\n",
+        "4. Router Retriever\n",
+        "5. Ensemble Retrieval Guide\n",
+        "6. Google Generative Language Semantic Retriever\n",
+        "7. Structured Hierarchical Retrieval\n",
+        "8. Managed Retrievers\n",
+        "9. Google Generative Language Semantic Retriever\n",
+        "10. Vectara Managed Index\n",
+        "11. Managed Index with Zilliz Cloud Pipelines\n",
+        "12. VideoDB Retriever"
       ],
       "metadata": {
-        "id": "et52wk4s4Fcf"
+        "id": "lGnt7yvX6nhY"
       }
     }
   ]
