--- a/llamaIndex_Retrievers.ipynb
+++ b/llamaIndex_Retrievers.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPbSnBksV1IZlcm1simPMHy",
+      "authorship_tag": "ABX9TyN8aM7qZp/28VnG11eNXMuK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -84,11 +84,13 @@
         "5. Ensemble Retrieval Guide\n",
         "6. Google Generative Language Semantic Retriever\n",
         "7. Structured Hierarchical Retrieval\n",
-        "8. Managed Retrievers\n",
-        "9. Google Generative Language Semantic Retriever\n",
-        "10. Vectara Managed Index\n",
-        "11. Managed Index with Zilliz Cloud Pipelines\n",
-        "12. VideoDB Retriever"
+        "\n",
+        "**Managed Retrievers**\n",
+        "\n",
+        "1. Google Generative Language Semantic Retriever\n",
+        "2. Vectara Managed Index\n",
+        "3. Managed Index with Zilliz Cloud Pipelines\n",
+        "4. VideoDB Retriever"
       ],
       "metadata": {
         "id": "lGnt7yvX6nhY"
