--- a/llamaIndex_Retrievers.ipynb
+++ b/llamaIndex_Retrievers.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN8aM7qZp/28VnG11eNXMuK",
+      "authorship_tag": "ABX9TyPKlzRvc6e0OUhQiNUgs5Zk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/RajeshPeddireddy/VectorDB/blob/main/llamaIndex_Retrievers.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "https://docs.llamaindex.ai/en/stable/module_guides/querying/retriever/retrievers.html"
+      ],
+      "metadata": {
+        "id": "T6AWjnvs7_uC"
+      }
     },
     {
       "cell_type": "markdown",
