--- a/llamaIndex_ResponseSynthesizers.ipynb
+++ b/llamaIndex_ResponseSynthesizers.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPKlzRvc6e0OUhQiNUgs5Zk",
+      "authorship_tag": "ABX9TyPh6Qx0HkJw6XYhCKgfxs27",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,80 +29,41 @@
     {
       "cell_type": "markdown",
       "source": [
-        "https://docs.llamaindex.ai/en/stable/module_guides/querying/retriever/retrievers.html"
+        "LlamaIndex Query Engine offers several response synthesizers to generate meaningful responses from your data. Let’s explore them:\n",
+        "\n",
+        " **1. Refine Synthesizer:**\n",
+        "This synthesizer creates and refines answers by sequentially processing each retrieved text chunk.\n",
+        "It makes a separate LLM call per Node/retrieved chunk.\n",
+        "Here’s how it works:\n",
+        "The first chunk is used in a query using the text_qa_template prompt.\n",
+        "Then, the answer and the next chunk (along with the original question) are used in another query with the refine_template prompt.\n",
+        "This process continues until all chunks have been parsed.\n",
+        "It’s suitable for providing more detailed answers.\n",
+        "\n",
+        "\n",
+        " **2. Compact Synthesizer (Default):**\n",
+        "Similar to the refine synthesizer, but it concatenates the chunks beforehand.\n",
+        "This results in fewer LLM calls.\n",
+        "The compact mode is commonly used for efficient responses.\n",
+        "\n",
+        " **3. Accumulate Synthesizer:**\n",
+        "The Accumulate synthesizer accumulates information from multiple chunks.\n",
+        "It’s useful for scenarios where you want to accumulate evidence or context across different parts of the response.\n",
+        "You can configure it with various options, such as streaming and asynchronous processing.\n",
+        "\n",
+        " **4. Other Synthesizers:**\n",
+        "LlamaIndex provides additional synthesizers, including:\n",
+        "Structured Hierarchical Retrieval: For structured and semi-structured data.\n",
+        "JSON Synthesizer: For handling JSON data.\n",
+        "\n",
+        "**5. Knowledge Graph Synthesizer**: For querying knowledge graphs.\n",
+        "Ensemble Synthesizer: For advanced multi-document querying/analysis.\n",
+        "Remember, these synthesizers allow you to converse with your data effectively, whether you’re building a chatbot, a search engine, or any other application! 🦙🔍🚀\n",
+        "\n",
+        "For detailed inputs and outputs of each synthesizer, you can refer to the official documentation1.\n"
       ],
       "metadata": {
-        "id": "T6AWjnvs7_uC"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        " **Auto-Retrieval**\n",
-        "\n",
-        "These retrieval techniques perform semi-structured queries, combining semantic search with structured filtering.\n",
-        "\n",
-        "1. A Simple to Advanced Guide with Auto-Retrieval (with Pinecone + Arize Phoenix)\n",
-        "\n",
-        "2. Auto-Retrieval (with Lantern)\n",
-        "\n",
-        "3. Auto-Retrieval (with Chroma)\n",
-        "\n",
-        "4. Auto-Retrieval (with BagelDB)\n",
-        "\n",
-        "5. Structured Hierarchical Retrieval\n",
-        "\n",
-        "6. Auto-Retrieval from a Vectara Index\n"
-      ],
-      "metadata": {
-        "id": "et52wk4s4Fcf"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        " **Advanced Retrieval and Search**\n",
-        "\n",
-        "  These guides contain advanced retrieval techniques. Some are common like keyword/hybrid search, reranking, and more. Some are specific to LLM + RAG pipelines, like small-to-big and auto-merging retrieval.\n",
-        "\n",
-        "1. Define Custom Retriever\n",
-        "2. BM25 Hybrid Retriever\n",
-        "3. Simple Fusion Retriever\n",
-        "4. Reciprocal Rerank Fusion Retriever\n",
-        "5. Relative Score Fusion and Distribution-Based Score Fusion\n",
-        "6. Auto Merging Retriever\n",
-        "7. Metadata Replacement + Node Sentence Window\n",
-        "8. Composable Objects\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "Di1raoS1ksj-"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        " **Composed Retrievers**\n",
-        "\n",
-        "These are retrieval techniques that are composed on top of other retrieval techniques - providing higher-level capabilities like hierarchical retrieval and query decomposition.\n",
-        "\n",
-        "1. Recursive Retriever + Query Engine Demo\n",
-        "2. Recursive Retriever + Node References\n",
-        "3. Recursive Retriever + Node References + Braintrust\n",
-        "4. Router Retriever\n",
-        "5. Ensemble Retrieval Guide\n",
-        "6. Google Generative Language Semantic Retriever\n",
-        "7. Structured Hierarchical Retrieval\n",
-        "\n",
-        "**Managed Retrievers**\n",
-        "\n",
-        "1. Google Generative Language Semantic Retriever\n",
-        "2. Vectara Managed Index\n",
-        "3. Managed Index with Zilliz Cloud Pipelines\n",
-        "4. VideoDB Retriever"
-      ],
-      "metadata": {
-        "id": "lGnt7yvX6nhY"
+        "id": "gGqI6Bk9I3Fw"
       }
     }
   ]
