--- a/llamaIndex_QueryEngine.ipynb
+++ b/llamaIndex_QueryEngine.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPntGopnobKmWZcPmMM9sg0",
+      "authorship_tag": "ABX9TyOB5XZVC6I6w2lZFJmSlsrZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/RajeshPeddireddy/VectorDB/blob/main/llamaIndex_QueryEngine.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Query Engines:** A query engine is an end-to-end pipeline that allows you to ask questions over your data. It takes in a natural language query, and returns a response, along with reference context retrieved and passed to the LLM.\n"
+      ],
+      "metadata": {
+        "id": "j2ZP-zLIP-GT"
+      }
     },
     {
       "cell_type": "markdown",
