--- a/llamaIndex_IndexType.ipynb
+++ b/llamaIndex_IndexType.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP4MZ2qcb962EgtKvKiHAIH",
+      "authorship_tag": "ABX9TyOOogBDfI50FPTWz+Wt0kA9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,6 +29,27 @@
     {
       "cell_type": "markdown",
       "source": [],
+      "metadata": {
+        "id": "Yent40IzRPqU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "https://docs.llamaindex.ai/en/stable/getting_started/concepts.html\n",
+        "\n",
+        "**Indexing**:\n",
+        "\n",
+        "this means creating a data structure that allows for querying the data. For LLMs this nearly always means creating vector embeddings, numerical representations of the meaning of your data, as well as numerous other metadata strategies to make it easy to accurately find contextually relevant data.\n",
+        "\n",
+        " **Indexing Stage Indexes:**\n",
+        "\n",
+        " Once you’ve ingested your data, LlamaIndex will help you index the data into a structure that’s easy to retrieve. This usually involves generating vector embeddings which are stored in a specialized database called a vector store. Indexes can also store a variety of metadata about your data.\n",
+        "\n",
+        " **Embeddings**\n",
+        "\n",
+        "LLMs generate numerical representations of data called embeddings. When filtering your data for relevance, LlamaIndex will convert queries into embeddings, and your vector store will find data that is numerically similar to the embedding of your query."
+      ],
       "metadata": {
         "id": "Di1raoS1ksj-"
       }
