--- a/llamaIndex_Retrievers.ipynb
+++ b/llamaIndex_Retrievers.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPKlzRvc6e0OUhQiNUgs5Zk",
+      "authorship_tag": "ABX9TyP8IkiJDmrYNwjB0LqZmagl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "https://docs.llamaindex.ai/en/stable/module_guides/querying/retriever/retrievers.html"
+        "https://docs.llamaindex.ai/en/stable/module_guides/querying/retriever/retrievers.html\n",
+        "\n",
+        "https://docs.llamaindex.ai/en/stable/getting_started/concepts.html\n",
+        "\n",
+        "\n",
+        "Retrievers: A retriever defines how to efficiently retrieve relevant context from an index when given a query. Your retrieval strategy is key to the relevancy of the data retrieved and the efficiency with which it’s done.\n",
+        "\n",
+        "Routers: A router determines which retriever will be used to retrieve relevant context from the knowledge base. More specifically, the RouterRetriever class, is responsible for selecting one or multiple candidate retrievers to execute a query. They use a selector to choose the best option based on each candidate’s metadata and the query.\n",
+        "\n",
+        "Node Postprocessors: A node postprocessor takes in a set of retrieved nodes and applies transformations, filtering, or re-ranking logic to them."
       ],
       "metadata": {
         "id": "T6AWjnvs7_uC"
