--- a/llamaIndex_ResponseSynthesizers.ipynb
+++ b/llamaIndex_ResponseSynthesizers.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPh6Qx0HkJw6XYhCKgfxs27",
+      "authorship_tag": "ABX9TyOQhpWbKw5hgWfi36GWA6nO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,6 +30,8 @@
       "cell_type": "markdown",
       "source": [
         "LlamaIndex Query Engine offers several response synthesizers to generate meaningful responses from your data. Let’s explore them:\n",
+        "\n",
+        "Response Synthesizers: A response synthesizer generates a response from an LLM, using a user query and a given set of retrieved text chunks.\n",
         "\n",
         " **1. Refine Synthesizer:**\n",
         "This synthesizer creates and refines answers by sequentially processing each retrieved text chunk.\n",
